--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
-    "C_Cpp.errorSquiggles": "disabled",
-    "files.associations": {
-        "math.h": "c"
-    }
+  "C_Cpp.errorSquiggles": "disabled",
+  "files.associations": {
+    "math.h": "c",
+    "stdio.h": "c"
+  }
 }
