--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -81,7 +81,7 @@
                 "$gcc"
             ],
             "group": "build",
-            "detail": "gcc디버거에서 생성된 작업입니다."
+            "detail": "디버거에서 생성된 작업입니다."
         },
         {
             "type": "cppbuild",
@@ -105,7 +105,7 @@
 //                "isDefault": true
 //            },
             
-            "detail": "g++디버거에서 생성된 작업입니다."
+            "detail": "디버거에서 생성된 작업입니다."
         },
         {
             "type": "cppbuild",
