--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
-  "C_Cpp.errorSquiggles": "disabled",
-  "files.associations": {
-    "math.h": "c",
-    "stdio.h": "c",
-    "string.h": "c"
-  }
+    "C_Cpp.errorSquiggles": "disabled",
+    "files.associations": {
+        "math.h": "c",
+        "stdio.h": "c",
+        "string.h": "c"
+    },
+    "cmake.configureOnOpen": false
 }
