--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
-    "C_Cpp.errorSquiggles": "disabled",
-    "files.associations": {
-        "math.h": "c",
-        "stdio.h": "c",
-        "string.h": "c"
-    },
-    "cmake.configureOnOpen": false
+  "C_Cpp.errorSquiggles": "disabled",
+  "files.associations": {
+    "*.embeddedhtml": "html",
+    "math.h": "c",
+    "stdio.h": "c",
+    "string.h": "c",
+    "stdlib.h": "c"
+  },
+  "cmake.configureOnOpen": false
 }
